monitoring/monitoring-ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring.anagno.dev
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitoring.anagno.dev
    external-dns.alpha.kubernetes.io/target: zh.anagno.dev
    kubernetes.io/ingressClassName: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`monitoring.anagno.dev`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
      middlewares:
      - name: security-headers
        namespace: proxy
  tls:
    secretName: monitoring.anagno.dev
    options:
      name: tls-security-headers
      namespace: proxy
