monitoring/monitoring-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`monitoring.intra`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
      middlewares:
      - name: security-headers
        namespace: proxy
      - name: https-redirect
        namespace: proxy
  tls:
    secretName: monitoring.intra
    options:
      name: tls-security-headers
      namespace: proxy
